--- a/Exercise_A/index.html
+++ b/Exercise_A/index.html
@@ -7,8 +7,44 @@
     <title></title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   </head>
   <body>
-    <!-- CODE HERE -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="./assets/bootstrap.png" width="30" height="30" alt="" loading="lazy">
+      </a>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-primary" href="#">Link</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <ul class="list-group">
+      <li class="list-group-item">
+        Item I
+      </li>
+      <li class="list-group-item">
+        Item II
+      </li>
+      <li class="list-group-item">
+        Item III
+      </li>
+      <li class="list-group-item">
+        Item IV
+      </li>
+      <li class="list-group-item">
+        Item V
+      </li>
+    </ul>
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Secondary</button>
+    <button type="button" class="btn btn-success">Success</button>
+    <button type="button" class="btn btn-danger">Danger</button>
   </body>
 </html>
