--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -13,7 +13,12 @@
       href="https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
-    <!-- Custom Stylesheet -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
 
@@ -30,5 +35,38 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <div class="header">
+      <img src="./assets/images/logo.png" />
+    </div>
+    <div class="hero">
+      <div class="container">
+        <h1>Beautiful Flowers</h1>
+        <button type="button" class="btn btn-primary btn-lg">Learn more</button>
+      </div>
+    </div>
+    <div class="description">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+            <img src="assets/images/flower-icon.png" />
+            <p>Flower for every kind of situation</p>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+            <img src="assets/images/payment-icon.png" />
+            <p>All major payments kinds accepted</p>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+            <img src="assets/images/phone-icon.png" />
+            <p>Free consultation</p>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
+            <img src="assets/images/truck-icon.png" />
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="" async defer></script>
   </body>
 </html>
