--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,7 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,10 +19,49 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <!-- Just an image -->
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img src="./assets/images/logo.png" alt="logo" loading="lazy">
+      </a>
+    </nav>
     <!--Banner Jumbotron of the image-->
-
+    <div class="jumbotron banner">
+      <h1 class="display-4 heading">Beautiful Flowers</h1>
+      <a class="btn btn-primary btn-lg" href="#" role="button" id="learn-more">Learn more</a>
+    </div>
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <div class="icons">
+        <div class="row feature">
+          <div class="col-lg-3 col-md-6 col-sm-12 sm-feature">
+            <img src="./assets/images/flower-icon.png" alt="flower icon" class="icon">
+            <p class="icon-text">Flowers for every kind of situation</p>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 sm-feature">
+            <img src="./assets/images/payment-icon.png" alt="payment icon" class="icon">
+            <p class="icon-text">All major payments kinds accepted</p>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 sm-feature">
+            <img src="./assets/images/phone-icon.png" alt="phone icon" class="icon">
+            <p class="icon-text">Free consultation</p>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-12 sm-feature">
+            <img src="./assets/images/truck-icon.png" alt="truck icon" class="icon">
+            <p class="icon-text">City wide delivery</p>
+          </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
 
     <!-- Payments Div -->
     <!-- Consultation Div -->
@@ -30,5 +69,9 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+
   </body>
 </html>
