--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,27 +1,65 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+</head>
+
+<body>
+  <!--Header (flower shop logo block element)-->
+  <nav>
+    <img src="assets/images/logo.png" alt="">
+  </nav>
+  <!--Banner Jumbotron of the image-->
+  <div class="banner">
+    <div class="overlay"></div>
+    <h1 class="heading">Beautiful Flowers</h1>
+    <div id="learn-more"">Learn More</div>
+    </div>
     <!--Four containers with img / text-->
+    <div class="container-fluid icons">
+      <div class="row">
+        <div class="col-md-6 icon-text col-sm-12 col-lg-3">
+          <img class="icon" src="assets/images/flower-icon.png" alt="flower-icon">
+          <p>Flowers for every kind of situation</p>
+        </div>
+        <div class="col-md-6 icon-text col-sm-12 col-lg-3">
+          <img class="icon" src="assets/images/payment-icon.png" alt="payment-icon">
+          <p>All major payments kinds accepted</p>
+        </div>
+        <div class="col-md-6 icon-text col-sm-12 col-lg-3">
+          <img class="icon" src="assets/images/phone-icon.png" alt="phone-icon">
+          <p>Free consulation</p>
+        </div>
+        <div class="col-md-6 icon-text col-sm-12 col-lg-3">
+          <img class="icon" src="assets/images/truck-icon.png" alt="truck-icon">
+          <p>City wide delivery</p>
+        </div>
+      </div>
+    </div>
     <!-- 4 containers -->
 
     <!-- Payments Div -->
@@ -30,5 +68,6 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
-  </body>
+</body>
+
 </html>
