--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
 
     <!-- Google Font - Lato -->
     <link
@@ -19,9 +25,48 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <div class="header">
+      <a><img src="./assets/images/logo.png" /></a>
+    </div>
     <!--Banner Jumbotron of the image-->
+    <div class="jumbotron jumbotron-fluid banner">
+      <div class="container in_banner">
+        <h1 class="display-4 heading">Beautiful Flowers</h1>
+        <a id="learn-more" class="btn btn-primary btn-lg" href="#" role="button"
+          >Learn more</a
+        >
+      </div>
+    </div>
 
     <!--Four containers with img / text-->
+    <div class="icons">
+      <div class="row">
+        <div class="col-md-6 col-lg-3 icon">
+          <img src="assets/images/flower-icon.png" />
+          <div class="icon-text">
+            <p>Flowers for every <br />kind of situation</p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 icon">
+          <img src="assets/images/payment-icon.png" />
+          <div class="icon-text">
+            <p>All major payment<br />kinds accepted</p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 icon">
+          <img src="assets/images/phone-icon.png" />
+          <div class="icon-text">
+            <p>Free consulation</p>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3 icon">
+          <img src="assets/images/truck-icon.png" />
+          <div class="icon-text">
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </div>
+    </div>
     <!-- 4 containers -->
 
     <!-- Payments Div -->
@@ -30,5 +75,22 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script
+      src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+      integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+      crossorigin="anonymous"
+    ></script>
+
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+      integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
