--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,11 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link 
+      rel="stylesheet" 
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" 
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" 
+      crossorigin="anonymous">
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +23,38 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <header><img src="./assets/images/logo.png" ></header>
     <!--Banner Jumbotron of the image-->
+    <section class="banner">
+      <div class="heading">
+        <h1>Beautiful Flowers</h1>
+        <button id="learn-more">Learn More</button>
+      </div>
+    </section>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+      <section class="container-fluid icons">
+        <div class="row d-flex justify-content-center align-items-center">
+            <div class="icon col-sm-12 col-md-6 col-lg-3 d-flex justify-content-center align-items-center">
+              <img class="icon-text" src="./assets/images/flower-icon.png">
+              <p>Flowers for every kind of situation</p>
+            </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+            <div class="icon col-sm-12 col-md-6 col-lg-3 d-flex justify-content-center align-items-center">
+              <img class="icon-text" src="./assets/images/payment-icon.png">
+              <p>All major payment types accepted</p>
+            </div>
 
-    <!-- Delivery Div -->
+            <div class="icon col-sm-12 col-md-6 col-lg-3 d-flex justify-content-center align-items-center">
+              <img class="icon-text" src="./assets/images/phone-icon.png">
+              <p>Free consultation</p>
+            </div>
 
+            <div class="icon col-sm-12 col-md-6 col-lg-3 d-flex justify-content-center align-items-center">
+              <img class="icon-text" src="./assets/images/truck-icon.png">
+              <p>City Wide delivery</p>
+            </div>
+        </div>
+    </section>
     <!--Scripts required for bootstrap CDN-->
   </body>
 </html>
