--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,78 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+</head>
 
-    <!-- Delivery Div -->
+<body>
+  <!--Header (flower shop logo block element)-->
+  <!--Banner Jumbotron of the image-->
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+  <!--Four containers with img / text-->
+  <!-- 4 containers -->
+
+  <!-- Payments Div -->
+  <!-- Consultation Div -->
+
+  <!-- Delivery Div -->
+
+  <header class="logoHeader">
+    <img alt="Logo" img src="assets/images/logo.png">
+  </header>
+  <div class="flowerShopBanner">
+    <h1 id="beautifulFlowers">Beautiful Flowers</h1>
+    <button type="button" id="learnMore">Learn more</button>
+  </div>
+  <section class="shopFeatures">
+    <div class="container">
+      <div class="row">
+        <div class="col-sm-12 col-lg-3 col-md-6 feature">
+          <img alt="flowerIcon" src="assets/images/flower-icon.png" class="icon">
+          <h2 class="text">Flowers for every <br> kind of situation</h2>
+        </div>
+        <div class="col-sm-12 col-lg-3 col-md-6 feature">
+          <img alt="paymentIcon" src="assets/images/payment-icon.png" class="icon">
+          <h2 class="text">All major payments <br>kinds accepted</h2>
+        </div>
+        <div class="col-sm-12 col-lg-3 col-md-6 feature">
+          <img alt="phoneIcon" src="assets/images/phone-icon.png" class="icon">
+          <h2 class="text">Free consultation</h2>
+        </div>
+        <div class="col-sm-12 col-lg-3 col-md-6 feature">
+          <img alt="truckIcon" src="assets/images/truck-icon.png" class="icon">
+          <h2 class="text">City wide delivery</h2>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--Scripts required for bootstrap CDN-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"></script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
