--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -4,9 +4,8 @@
     <meta charset="utf-8" />
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
-    <!-- Link and CDN required for bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
     <!-- Google Font - Lato -->
     <link
@@ -19,16 +18,51 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <header>
+      <img src="assets/images/logo.png" alt="flower-icon">
+    </header>
     <!--Banner Jumbotron of the image-->
+    <div class="jumbotron jumbotron-fluid banner">
+      <div class="container">
+        <h1 class="display-4">Beautiful flowers</h1>
+        <a class="btn btn-primary btn-lg" id="learn-more" href="#" role="button">Learn more</a>
+      </div>
+    </div>
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
+    <div class="icons">
+      <div class="row  icon-block">
+        <div class="col-md-6">
+          <img src="assets/images/flower-icon.png" alt="flower-icon">
+          <div class="icon-text">
+            <p>Flower for every <br/> kind of situation</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <img src="assets/images/payment-icon.png" alt="payment-icon">
+          <div class="icon-text">
+            <p>All major payments <br/> kinds accepted</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+            <img src="assets/images/phone-icon.png" alt="phone-icon">
+          <div class="icon-text">
+            <p>Free consultation</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+            <img src="assets/images/truck-icon.png" alt="truck-icon">
+          <div class="icon-text">
+            <p>City wide delivery</p>
+          </div>
+        </div>
+      </div>
+    </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
-
-    <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   </body>
 </html>
