1st attempt(incomplete)

--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -5,30 +5,62 @@
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <!-- Link and CDN required for bootstrap -->
 
     <!-- Google Font - Lato -->
     <link
-      href="https://fonts.googleapis.com/css?family=Lato"
+      href="##https://fonts.googleapis.com/css?family=Lato"
       rel="stylesheet"
     />
     <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link rel="stylesheet" href=".##/assets/style/stylesheet.css" />
   </head>
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a href="#" class="nav-brand">
+        <img src="./assets/images/logo.png" alt="logo">
+      </a>
+    </nav>
+
     <!--Banner Jumbotron of the image-->
+    <div class="container">
+      <div class="row">Beautiful Flowers</div>
+      <div class="row"><button class="but btn-success"></button></div>
+    </div>
 
     <!--Four containers with img / text-->
     <!-- 4 containers -->
 
+    <!-- Flower Div -->
+    <div class="container">
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
+
     <!-- Payments Div -->
+    <div class="container">
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
+
     <!-- Consultation Div -->
+    <div class="container">
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
 
     <!-- Delivery Div -->
+    <div class="container">
+      <div class="col"></div>
+      <div class="col"></div>
+    </div>
 
     <!--Scripts required for bootstrap CDN-->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
   </body>
 </html>
