--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -15,9 +15,18 @@
     />
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
   </head>
 
   <body>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
     <!--Header (flower shop logo block element)-->
     <!--Banner Jumbotron of the image-->
 
@@ -30,5 +39,42 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <header><img src = './assets/images/logo.png' alt="logo">
+    </header>
+    <section class ="hero">
+      <div class = "overlay">
+      </div>
+      <div class = "heading">
+        <h1>Beautiful Flowers</h1>
+        <button>Learn more</button>
+      </div>
+    </section>
+    <section class = 'icons'>
+      <div class = 'icon'>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-6 col-lg">
+        <img src ='./assets/images/flower-icon.png' alt="flower">
+        <p>Flowers of every kind of situation
+        </p>
+      </div>
+         <div class="col-md-6 col-lg">
+        <img src ='./assets/images/payment-icon.png' alt="payment">
+        <p>All major payments kinds accepted
+        </p>
+         </div>
+        <div class="col-md-6 col-lg">
+        <img src ='./assets/images/phone-icon.png' alt="phone">
+        <p>Free consulation
+        </p>
+        </div>
+        <div class="col-md-6 col-lg">
+        <img src ='./assets/images/truck-icon.png' alt="truck">
+        <p>City wide delivery
+        </p>
+        </div>
+      </div>
+    </section>
+    <script src="" async defer></script>
   </body>
 </html>
