--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -1,34 +1,85 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Flower Shop BS</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Link and CDN required for bootstrap -->
+<head>
+  <meta charset="utf-8" />
+  <title>Flower Shop BS</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
-    <!-- Google Font - Lato -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
-    <!-- Custom Stylesheet -->
-    <link rel="stylesheet" href="./assets/style/stylesheet.css" />
-  </head>
+  <!-- Link and CDN required for bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous" />
+  <!-- Google Font - Lato -->
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" />
+  <!-- Custom Stylesheet -->
+  <link rel="stylesheet" href="./assets/style/stylesheet.css" />
+</head>
 
-  <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+<body>
+  <!--Header (flower shop logo block element)-->
+  <!--Banner Jumbotron of the image-->
+  <div class="container-fluid">
+    <img class="img" src="assets/images/logo.png" alt="logo">
+    <div class="jumbotron jumbotron-fluid banner">
+      <div class="heading">
+        <h1>Beautiful Flowers</h1>
+        <button type="button" class="btn" id="learn-more">Learn More</button>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+      </div>
+    </div>
+  </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
 
-    <!-- Delivery Div -->
+  <!--Four containers with img / text-->
+  <!-- 4 containers -->
+  <div class="icons">
+    <div class="row">
+      <div class="col-lg-3 col-md-6 icon-block">
+        <img class="icon" src="assets/images/flower-icon.png" alt="flower">
+        <div class="icon-text">
+          <p>Flowers for every <br>kind of situation</p>
+        </div>
+      </div>
 
-    <!--Scripts required for bootstrap CDN-->
-  </body>
+  <!-- Payments Div -->
+  <div class="col-lg-3 col-md-6 icon-block">
+    <img class="icon" src="assets/images/payment-icon.png" alt="payment">
+    <div class="icon-text">
+      <p>All major payments <br>kinds accepted</p>
+    </div>
+  </div>
+
+  <!-- Consultation Div -->
+  <div class="col-lg-3 col-md-6 icon-block">
+    <img class="icon" src="assets/images/phone-icon.png" alt="phone">
+    <div class="icon-text">
+      <p>Free consultation</p>
+    </div>
+  </div>
+
+  <!-- Delivery Div -->
+  <div class="col-lg-3 col-md-6 icon-block">
+    <img class="icon" src="assets/images/truck-icon.png" alt="truck">
+    <div class="icon-text">
+      <p>City wide delivery</p>
+    </div>
+  </div>
+</div>
+</div>
+
+  <!--Scripts required for bootstrap CDN-->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+</body>
+
 </html>
