--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -5,30 +5,65 @@
     <title>Flower Shop BS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
-
-    <!-- Link and CDN required for bootstrap -->
+    <link
+    rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+    crossorigin="anonymous"/>
 
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
-      rel="stylesheet"
-    />
+      rel="stylesheet"/>
     <!-- Custom Stylesheet -->
     <link rel="stylesheet" href="./assets/style/stylesheet.css" />
   </head>
-
   <body>
-    <!--Header (flower shop logo block element)-->
-    <!--Banner Jumbotron of the image-->
+    <header class="top">
+      <img src="./assets/images/logo.png" alt="">
+    </header>
+    <div class="banner">
+      <hr class="my-4">
+      <p class="head">Beautiful Flowers</p>
+      <a id="learn-more" href="#" role="button">Learn more</a>
+    </div>
+    <section class="icons .container no gutters">
+      <div class="row row-cols-lg-4 row-cols-md-2 row-cols-sm-1">
+      <div class="icon-block icon-text .col-lg-4 .col-md-2  .col-sm-1">
+        <img class="icon" src="./assets/images/flower-icon.png" alt="">
+        <p class="icon-text">Flowers for every kind of situation</p>
+      </div>
+      <div class="icon-block icon-text .col-lg-4 .col-md-2  .col-sm-1">
+        <img class="icon" src="./assets/images/payment-icon.png" alt="">
+        <p class="icon-text">All major payment kinds accepted</p>
+      </div>
+      <div class="icon-block icon-text .col-lg-4 .col-md-2  .col-sm-1">
+        <img class="icon" src="./assets/images/phone-icon.png" alt="">
+        <p class="icon-text">Free consultation</p>
+      </div>
+      <div class="icon-block icon-text .col-lg-4 .col-md-2 .col-sm-1">
+        <img class="icon" src="./assets/images/truck-icon.png" alt="">
+        <p class="icon-text">City wide delivery</p>
+      </div>
+    </div>
+    </section>
+    <script
+    src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"
+  ></script>
 
-    <!--Four containers with img / text-->
-    <!-- 4 containers -->
+  <script
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+    crossorigin="anonymous"
+  ></script>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+  <script
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+    crossorigin="anonymous"
+  ></script>
 
-    <!-- Delivery Div -->
-
-    <!--Scripts required for bootstrap CDN-->
   </body>
 </html>
