--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,7 +7,12 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+      integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z"
+      crossorigin="anonymous"
+    />
     <!-- Google Font - Lato -->
     <link
       href="https://fonts.googleapis.com/css?family=Lato"
@@ -19,16 +24,75 @@
 
   <body>
     <!--Header (flower shop logo block element)-->
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand" href="#">
+        <img
+          src="../Exercise_B/assets/images/logo.png"
+          width="auto"
+          height="auto"
+          alt=""
+          loading="lazy"
+        />
+      </a>
+    </nav>
     <!--Banner Jumbotron of the image-->
-
+    <div class="jumbotron banner">
+      <h1 class="display-4 heading">Beautiful Flowers</h1>
+      <a id="learn-more" class="btn btn-primary btn-lg " href="#" role="button"
+        >Learn more</a
+      >
+    </div>
     <!--Four containers with img / text-->
-    <!-- 4 containers -->
+    <div class="icons">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 col-lg-3 icon-block">
+            <img
+              src="./assets/images/flower-icon.png"
+              alt="..."
+              class=" icon"
+            />
+            <p class="icon-text">Free consultation</p>
+          </div>
+          <div class="col-md-6 col-lg-3 icon-block">
+            <img
+              src="./assets/images/payment-icon.png"
+              alt="..."
+              class="icon"
+            />
+            <p class="icon-text">Free consultation</p>
+          </div>
 
-    <!-- Payments Div -->
-    <!-- Consultation Div -->
+          <!-- Force next columns to break to new line at md breakpoint and up -->
 
-    <!-- Delivery Div -->
+          <div class="col-md-6  col-lg-3 icon-block">
+            <img src="./assets/images/phone-icon.png" alt="..." class=" icon" />
+            <p class="icon-text">Free consultation</p>
+          </div>
+          <div class="col-md-6  col-lg-3 icon-block">
+            <img src="./assets/images/truck-icon.png" alt="..." class="icon" />
 
-    <!--Scripts required for bootstrap CDN-->
+            <p class="icon-text">Free consultation</p>
+          </div>
+        </div>
+      </div>
+
+      <!--Scripts required for bootstrap CDN-->
+      <script
+        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"
+      ></script>
+    </div>
   </body>
 </html>
