--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -7,6 +7,8 @@
     <!--If you want to use bootstrap properly this is vital (helps browser to measure the page and readjust the information accordingly-->
 
     <!-- Link and CDN required for bootstrap -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
     <!-- Google Font - Lato -->
     <link
@@ -30,5 +32,35 @@
     <!-- Delivery Div -->
 
     <!--Scripts required for bootstrap CDN-->
+    <header><img src='../Exercise_B/assets/images/logo.png'></header>
+    <section class="top">
+      <div class="overlay">
+      </div>
+      <div class="heading">
+        <h1>Beautiful Flowers</h1>
+        <button>learn more</button>
+      </div>
+    </section>
+    <div class="container-fluid">
+      <div class="row cir">
+    <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+      <img class="img-fluid" alt="1"  src="./assets/images/flower-icon.png" data-holder-rendered="true">
+      <h3>flowers for every kind of situation</h3>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+      <img class="img-fluid" alt="2"  src="./assets/images/payment-icon.png" data-holder-rendered="true">
+      <h3>all major payments kinds accepted</h3>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+      <img class="img-fluid" alt="3"  src="./assets/images/phone-icon.png" data-holder-rendered="true">
+      <h3>free consultation</h3>
+    </div>
+    <div class="col-lg-6 col-md-6 col-sm-12 text-center">
+      <img class="img-fluid" alt="4"  src="./assets/images/truck-icon.png" data-holder-rendered="true">
+      <h3>city wide delivery</h3>
+    </div>
+  </div>
+  </div>
+    </section>
   </body>
 </html>
