exercise B text size

--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -38,7 +38,7 @@
       <div class="row">
         <div class="icon-block col-lg-3 col-md-6 row">     
             <img class="icon col" src="/assets/images/flower-icon.png">
-            <p class="icon-text col">Flowers for every kind of situation</p>
+            <p class="icon-text col h3">Flowers for every kind of situation</p>
         </div>
 
 
@@ -47,14 +47,14 @@
 
         <div class="icon-block col-lg-3 col-md-6 row">     
             <img class="icon col" src="/assets/images/payment-icon.png">
-            <p class="icon-text col">All major payments kinds accepted</p>
+            <p class="icon-text col h3">All major payments kinds accepted</p>
         </div>
 
         <!-- Consultation Div -->
 
         <div class="icon-block col-lg-3 col-md-6 row">     
              <img class="icon col" src="/assets/images/phone-icon.png">
-             <p class="icon-text col">Free consulation</p>
+             <p class="icon-text col h3">Free consulation</p>
          </div>
 
          <!-- Delivery Div -->
@@ -62,7 +62,7 @@
 
          <div class="icon-block col-lg-3 col-md-6 row">     
             <img class="icon col" src="/assets/images/truck-icon.png">
-            <p class="icon-text col">City wide delivery</p>
+            <p class="icon-text col h3">City wide delivery</p>
         </div>
       </div>
     </div>
