Adjusted icon position

--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -45,13 +45,14 @@
             src="/Exercise_B/assets/images/flower-icon.png"
             alt=""
           />
-
-          <div class="icon-text">Flower for every <br />kind of situation</div>
+          <div class="icon-text customposition">
+            Flower for every <br />kind of situation
+          </div>
         </div>
         <!-- Payments Div -->
         <div class="col-md-3 col-sm-6 pt-3">
           <img class="icon" src="/Exercise_B/assets/images/payment-icon.png" />
-          <div class="icon-text text-center">
+          <div class="icon-text customposition">
             All major payments <br />kinds accepted
           </div>
         </div>
