fixed col responsiveness

--- a/Exercise_B/index.html
+++ b/Exercise_B/index.html
@@ -40,9 +40,9 @@
   </div>
   </div>
   <!-- 4 containers -->
-  <div class="icons">
+  <div class="container-fluid icons">
     <div class="row">
-      <div class="col">
+      <div class="col-lg-3 col-md-6">
         <div class="icon">
           <img src="assets/images/flower-icon.png">
           <div class="icon-text">
@@ -50,7 +50,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-6">
         <div class="icon">
           <img src="assets/images/payment-icon.png">
           <div class="icon-text">
@@ -58,9 +58,7 @@
           </div>
         </div>
       </div>
-    </div>
-    <div class="row">
-      <div class="col">
+      <div class="col-lg-3 col-md-6">
         <div class="icon">
           <img src="assets/images/phone-icon.png">
           <div class="icon-text">
@@ -68,7 +66,7 @@
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-3 col-md-6">
         <div class="icon">
           <img src="assets/images/truck-icon.png">
           <div class="icon-text">
